saves/test/demo_full_20240802_193545/alwaysblock1/debug_2_reboot/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp alwaysblock1_tb.v alwaysblock1.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
alwaysblock1_tb.v:64: $finish called at 12000 (1ps)

iverilog cmd 2 error:

